# glow

./: .dockerignore  .env.example  .gitignore  App.tsx  Dockerfile  README.md  app.config.ts  app.json  babel.config.js  eas.json  evaluate.ts  index.ts  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yaml  fly-deploy.yml  fly-staging.yml
agent/scripts/: fetch_token.py
android/app/: build.gradle
app/: _layout.tsx  ai+api.ts  index.tsx  settings.tsx
app/(home)/: _layout.tsx  index.tsx
components/: Auth.tsx
components/audio-message/: index.tsx
components/audio-player-context/: index.tsx
components/auth/: apple.tsx  index.tsx
components/chat/: index.tsx
components/screens/: home.tsx  input.tsx  settings.tsx
components/signup/: index.tsx
components/suggestion-sheet/: index.tsx
components/text-switch/: index.tsx
components/typing-indicator/: index.tsx
components/welcome-circle/: index.tsx
context/: SessionContext.tsx  index.tsx
hooks/: useChat.ts
ios/myapp/: Info.plist
ios/myapp.xcodeproj/: project.pbxproj
lib/: analytics.ts  hook.ts  style.ts  supabase.ts  utils.ts
pi/: pi-user-history (1).json  pi-user-history (3).json  pi-user-history (4).json  pi-user-history (5).json  pi-user-history (6).json  pi-user-history.json
prisma/: schema.prisma
python/: requirements.txt
scripts/: constants.ts  continue_dialogue.py  print_responses.py  start_dialogue.py  types.ts  utils.py  utils.ts
server/: requirements.txt
supabase/: config.toml
synthetic/: data.json  user.json
test/: test_time_ago.py
(+87 files in other folders)
