[tool.poetry]
name = "glow"
version = "0.1.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<=3.12.4"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
presidio-analyzer = "^2.2.355"
presidio-anonymizer = "^2.2.355"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"